# Cat_Tracker_App

./: CMakeLists.txt  README.md  architecture.txt  main.py  requirements.txt  video.py
static/: manifest.json  service-worker.js
templates/: index.html
